# jarvis-codex

./: .gitignore  AGENTS.md  LOOP.md  README.md  STATE.md  loop-budget.md  loop-run-log.md  package.json  pyproject.toml  vite.config.ts
.codex/: config.toml
.codex/agents/: jarvis_docs_researcher.toml  jarvis_explorer.toml  jarvis_reviewer.toml  jarvis_worktrunk_planner.toml
.github/: pull_request_template.md
docs/: CODEX_AGENT_TOML_AUDIT_2026-06-22.md  CONTEXT_ROUTING.md  HARDWARE_ACCELERATION.md  HARNESS.md  HARNESS_INTEGRATION_ASSESSMENT.md  JARVIS_WHITE_PAPER.md  LOCAL_ML_RUNTIME.md  OVERHAUL_WRAPUP.md  PLAN_VIEWER.md  PRODUCT_READINESS.md  RELEASE_ARTIFACTS.md  REMOTION_REVIEW.md  RUNTIME_GATES.md  SAFE_HANDOFF_GATEWAY_PRD.md  VISION.md  VOICE_INGRESS.md  VOICE_NOTIFICATIONS.md  WHISPER_CPP_STT_RUNBOOK.md  WORKTRUNK_LANES.md  WORKTRUNK_LANE_CLI_PRD.md  safety.md
patterns/: registry.yaml
scripts/: serve-plan-viewer.py  validate-jarvis-codex-phase1.py  verify-pr-readiness.sh  whisper-cpp-stt-adapter.py
tests/: test_approval.py  test_autonomous_loop.py  test_cli.py  test_codeburn.py  test_codex_app_server.py  test_electron_hud_scaffold.py  test_event_store.py  test_event_stream.py  test_gemini.py  test_github_ci.py  test_governance.py  test_hardware.py  test_hud.py  test_hud_browser.py  test_lanes.py  test_loop_readiness.py  test_mobile.py  test_notifications.py  test_packaging.py  test_plan_viewer.py  test_policy.py  test_protocol.py  test_pty_supervisor.py  test_release.py  test_remotion_scaffold.py  test_runtime_app.py  test_runtime_control.py  test_safe_handoff.py  test_state.py  test_static_plan_viewer.py  test_static_plan_viewer_browser.py  test_voice.py  test_voice_audio.py  test_voice_intent.py  test_voice_mic.py  test_whisper_cpp_adapter.py  test_windows_launcher.py  test_windows_mic_scaffold.py  test_workflow_rehearsal.py  test_worktrunk_lane_cli_prd.py
(+122 files in other folders)
