[project]
name = "jarvis-codex"
version = "0.1.0"
description = "Local-first voice and memory layer for Codex"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "cyiver" }]
dependencies = []

[dependency-groups]
dev = ["pytest>=9.1.1"]

[project.scripts]
jarvis-codex = "jarvis_codex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
