[project]
name = "jarvis-codex"
version = "0.1.0"
description = "Local-first voice and memory layer for Codex"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "cyiver" }]
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=9.1.1",
]

[project.scripts]
jarvis = "jarvis_codex.cli:main"
jarvis-codex = "jarvis_codex.cli:main"
jarvis-plan-viewer = "jarvis_codex.plan_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
